<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPinkLight">

    <!-- Nombre de la aplicación -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginBottom="30dp"/>


    <ImageView
        android:id="@+id/appImage"
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/image_2"
        />

    <!-- Botón de inicio -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:background="@drawable/rounded_button_pink"
        android:textColor="@android:color/black" />
</LinearLayout>
